--- a/.github/workflows/laravel-lib-dev.yml
+++ b/.github/workflows/laravel-lib-dev.yml
@@ -27,11 +27,6 @@ jobs:
         os: [ ubuntu-latest, windows-latest ]
         php: [ 8.0 ]
         laravel: [ 8.*, 9.* ]
-        include:
-          - laravel: 8.*
-            testbench: ^6.23
-          - laravel: 9.*
-            testbench: ^7.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.os }}
 
@@ -71,7 +66,7 @@ jobs:
             ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-
 
       - name: Install Laravel dependencies
-        run: composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction
+        run: composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction
 
       - name: Install dependencies
         if: steps.composer-cache.outputs.cache-hit != 'true'
