--- a/.github/workflows/laravel-lib-dev.yml
+++ b/.github/workflows/laravel-lib-dev.yml
@@ -76,11 +76,11 @@ jobs:
         id: laravel_version
         run: |
           echo '::set-output name=LARAVEL_VERSION::$(echo "$(composer show laravel/framework | grep versions | grep -Eow 'v[0-9]+' | sed 's/v//')"'.*')'
-          echo "Installed version ${{ steps.laravel_version.outputs.LARAVEL_VERSION }} / Expected version ${{ matrix.laravel }}"
+          echo "Installed version $(echo "$(composer show laravel/framework | grep versions | grep -Eow 'v[0-9]+' | sed 's/v//')"'.*') / Expected version ${{ matrix.laravel }}"
 
       - name: Fail on incorrect Laravel version
         if: steps.laravel_version.outputs.LARAVEL_VERSION != matrix.laravel
-        run: echo '::error::Incorrect Laravel version installed' && exit 1
+        run: echo '::error::Incorrect Laravel version installed (${{ steps.laravel_version.outputs.LARAVEL_VERSION }})' && exit 1
 
       - name: Run test suite
         run: composer run-script test
