--- a/.github/workflows/laravel-lib-tagged-release.yml
+++ b/.github/workflows/laravel-lib-tagged-release.yml
@@ -66,7 +66,7 @@ jobs:
             ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-
 
       - name: Install Laravel dependencies
-        run: composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction
+        run: composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --with-all-dependencies
 
       - name: Install dependencies
         if: steps.composer-cache.outputs.cache-hit != 'true'
