--- a/.github/workflows/laravel-lib-dev.yml
+++ b/.github/workflows/laravel-lib-dev.yml
@@ -27,6 +27,11 @@ jobs:
         os: [ ubuntu-latest, windows-latest ]
         php: [ 8.0 ]
         laravel: [ 8.*, 9.* ]
+        include:
+          - laravel: 8.*
+            testbench: ^6.23
+          - laravel: 9.*
+            testbench: ^7.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.os }}
 
@@ -64,6 +69,9 @@ jobs:
           key: ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-
+
+      - name: Setup Testbench
+        run: composer require "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
 
       - name: Install Laravel dependencies
         run: composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --with-all-dependencies
