--- a/.github/workflows/laravel-lib-dev.yml
+++ b/.github/workflows/laravel-lib-dev.yml
@@ -61,6 +61,15 @@ jobs:
       - name: Validate composer.json and composer.lock
         run: composer validate
 
+      - name: Setup Testbench
+        run: composer require "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update --dev
+
+      - name: Setup Laravel
+        run: composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
+
+      - name: Install Laravel dependencies
+        run: composer update "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction
+
       - name: Cache Composer packages
         id: composer-cache
         uses: actions/cache@v2
@@ -69,12 +78,6 @@ jobs:
           key: ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-
-
-      - name: Setup Testbench
-        run: composer require "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-
-      - name: Install Laravel dependencies
-        run: composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --with-all-dependencies
 
       - name: Install dependencies
         if: steps.composer-cache.outputs.cache-hit != 'true'
