--- a/.github/workflows/laravel-lib-tagged-release.yml
+++ b/.github/workflows/laravel-lib-tagged-release.yml
@@ -43,6 +43,12 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.composer/cache/files
+          key: dependencies-laravel-${{ runner.os }}-${{ matrix.laravel }}-testbench-${{ matrix.testbench }}-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
+
       - name: Setup PHP ${{ matrix.php }}
         uses: shivammathur/setup-php@v2
         with:
@@ -61,27 +67,11 @@ jobs:
       - name: Validate composer.json and composer.lock
         run: composer validate
 
-      - name: Setup Testbench
-        run: composer require "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update --dev
-
-      - name: Setup Laravel
-        run: composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
-
-      - name: Install Laravel dependencies
-        run: composer update "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --with-all-dependencies
-
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v2
-        with:
-          path: vendor
-          key: ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-php${{ matrix.php }}-laravel${{ matrix.laravel }}-
-
       - name: Install dependencies
-        if: steps.composer-cache.outputs.cache-hit != 'true'
-        run: composer install --prefer-dist --no-progress
+        run: |
+            composer require "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update --dev
+            composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
+            composer update --prefer-dist --no-interaction
 
       - name: Detect installed Laravel version
         id: laravel_version
