--- a/.github/workflows/laravel-lib-dev.yml
+++ b/.github/workflows/laravel-lib-dev.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest, windows-latest ]
-        php: [ 8.0 ]
+        php: [ "8.0" ]
         laravel: [ 8.*, 9.* ]
         include:
           - laravel: 8.*
@@ -33,7 +33,7 @@ jobs:
           - laravel: 9.*
             testbench: ^7.4
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.os }}
+    name: PHP ${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.os }}
 
     steps:
       - name: Set git to use LF
