--- a/.github/workflows/laravel-lib-dev.yml
+++ b/.github/workflows/laravel-lib-dev.yml
@@ -38,8 +38,7 @@ jobs:
     steps:
       - name: Set git to use LF
         run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
+          git config --global core.autocrlf input
 
       - uses: actions/checkout@v2
 
